# rust-crash-course

./: Cargo.toml
practise/helloWorld/examples/: test.rs
practise/helloWorld/src/: main.rs
topics/array/solutions/: Cargo.toml
topics/array/solutions/tests/: test.rs
topics/async_await/exercises/src/: main.rs
topics/async_await/solutions/: Cargo.toml
topics/borrowing_rules/exercises/: Cargo.toml
topics/borrowing_rules/solutions/examples/: borrow.rs
topics/enum_type/exercises/: Cargo.toml
topics/enum_type/exercises/tests/: test.rs
topics/enum_type/solutions/: Cargo.toml
topics/enum_type/solutions/examples/: enum.rs
topics/enum_type/solutions/tests/: test.rs
topics/error/exercises/src/: lib.rs
topics/for_loop/exercises/src/: lib.rs
topics/for_loop/solutions/: Cargo.toml
topics/generic_trait/exercises/src/: lib.rs
topics/generic_trait/solutions/: Cargo.toml
topics/generic_type/exercises/src/: lib.rs
topics/hash_map/solutions/: Cargo.toml
topics/if_else/exercises/src/: lib.rs
topics/if_let/exercises/src/: lib.rs
topics/iterator_adaptors/exercises/src/: lib.rs
topics/iterator_adaptors/solutions/: Cargo.toml
topics/join_select/exercises/: Cargo.toml
topics/join_select/exercises/src/: main.rs
topics/join_select/solutions/: Cargo.toml
topics/lifetime/exercises/src/: main.rs
topics/lifetime/solutions/: Cargo.toml
topics/method/exercises/src/: lib.rs
topics/pattern_match/exercises/src/: lib.rs
topics/question/exercises/src/: lib.rs
topics/question/solutions/: Cargo.toml
topics/scalar/solutions/: Cargo.toml
topics/scalar/solutions/examples/: scalar.rs
topics/struct_type/exercises/src/: lib.rs
topics/struct_type/solutions/: Cargo.toml
topics/struct_type/solutions/examples/: struct.rs
topics/trait_basic/exercises/: Cargo.toml
topics/trait_basic/exercises/src/: lib.rs
topics/trait_basic/exercises/tests/: test.rs
topics/trait_basic/solutions/: Cargo.toml
topics/trait_bound/exercises/src/: lib.rs
topics/tuple/exercises/src/: lib.rs
topics/unwrap/exercises/src/: lib.rs
topics/unwrap/solutions/: Cargo.toml
topics/variable/solutions/examples/: var.rs
topics/vector/exercises/src/: lib.rs
topics/vector/solutions/: Cargo.toml
topics/vector/solutions/examples/: vec.rs
