[workspace]
resolver = "3"
members = [
    "practise/helloWorld",
    "topics/array/exercises",
    "topics/async_await/exercises",
    "topics/borrowing_rules/exercises",
    "topics/enum_type/exercises",
    "topics/error/exercises",
    "topics/for_loop/exercises",
    "topics/function/exercises",
    "topics/generic_trait/exercises",
    "topics/generic_type/exercises",
    "topics/hash_map/exercises",
    "topics/hello/exercises",
    "topics/if_else/exercises",
    "topics/if_let/exercises",
    "topics/iterator_adaptors/exercises",
    "topics/join_select/exercises",
    "topics/lifetime/exercises",
    "topics/method/exercises",
    "topics/modules/exercises",
    "topics/ownership/exercises",
    "topics/pattern_match/exercises",
    "topics/question/exercises",
    "topics/scalar/exercises",
    "topics/stack_heap",
    "topics/string/exercises",
    "topics/struct_type/exercises",
    "topics/trait_basic/exercises",
    "topics/trait_bound/exercises",
    "topics/tuple/exercises",
    "topics/unwrap/exercises",
    "topics/variable/exercises",
    "topics/vector/exercises",
    "topics/scalar/solutions",
    "topics/array/solutions",
    "topics/enum_type/solutions",
    "topics/vector/solutions",
    "topics/struct_type/solutions",
    "topics/hash_map/solutions",
    "topics/for_loop/solutions",
    "topics/borrowing_rules/solutions",
    "topics/unwrap/solutions",
    "topics/question/solutions",
    "topics/trait_basic/solutions",
    "topics/generic_trait/solutions",
    "topics/iterator_adaptors/solutions",
    "topics/async_await/solutions",
    "topics/join_select/solutions",
]
